# pythra-toolkit

./: .gitignore  CHANGELOG.md  README.md  config.yaml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build_wheels.yml
pythra/: core.py  server.py
pythra_cli/: main.py
src/pythra/: MANIFEST.in  __init__.py  config.yaml  library_cache.json  main.py  marktest.py  setup.py
src/pythra.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/pythra/perv_tests/: main.py
src/pythra/plugins/markdown/: README.md  __init__.py  controller.py  editor_state.py  package.json  style.py  widget.py
src/pythra/project_template/lib/: main.py
src/pythra/project_template/render/: index.html  styles.css
src/pythra/pythra/: __init__.py  api.py  base.py  class_list.py  config.py  controllers.py  core.py  debug_utils.py  drawing.py  events.py  generate_icons.py  navigation.py  package_manager.py  package_registry.py  package_security.py  package_system.py  painting.py  plugins.py  reconciler.py  reconciler_cython.c  reconciler_cython.cp313-win_amd64.pyd  reconciler_cython.pyx  reconciler_loader.py  rust_reconciler_adapter.py  state.py  styles.py  test.py  widgets.py  widgets_more.py
src/pythra/pythra.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/pythra/pythra/cli/: __init__.py  main.py  package_commands.py
src/pythra/pythra/icons/: __init__.py  base.py  icons_outlined.py  icons_outlined_1.py  icons_rounded.py  icons_rounded_1.py  icons_sharp.py  icons_sharp_1.py
src/pythra/pythra/render_template/: index.html  styles.css
src/pythra/pythra/tests/: __init__.py  test_rust_adapter.py
src/pythra/pythra/window/: ind.html  main.py  (+2 more)
src/pythra/pythra_cli/: __init__.py  main.py  package_commands.py
src/pythra/render/: index.html  main.js
test/: cli.py  dir_struc.py  drawer.py  dropdown.py  dropdown_app.py  field.py  main_wig.py  media_scanner.py  n_state.py  path.py  player.py  pythra_cli.py  rd.py  read.copy  run_adapter_tests.py  scroll.py  song_utils.py  state.py  test.py  test2.py  test_diff_engine.py  test_reconciliation.py  util.py  v_list.py
test/render/: bd.html  index.html  styles.css
test/render/js/: gradient_border.js  scrollBar.js  slider.js  virtual_list.js
(+17 files in other folders)
