[build-system]
requires = ["setuptools>=61.0", "wheel", "Cython"] 
build-backend = "setuptools.build_meta"

[project]
name = "pythra"            
version = "0.1.15"
description = "PyThra — a Flutter-like GUI framework in Python. a declarative Python UI framework for desktop apps with a webview renderer."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name="Ahmad Muhammad Bashir", email="ambashir02@gmail.com" }]
requires-python = ">=3.9"
dependencies = [
    "PySide6>=6.10.0",
    "pyyaml>=6.0",
    "setuptools>=65.0",
    "orjson>=3.11.4",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "click>=8.0.0",
    "tabulate>=0.8.0",
    "PyYAML>=5.4.0",
    "pyinstaller>=4.0",
    "semver>=3.0.0",
    "requests>=2.31.0",
    "Cython>=0.29.30"
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

[project.scripts]
pythra = "pythra.pythra_cli.main:app"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"pythra" = [
  "project_template/render/*",
  "project_template/render/js/*",
  "project_template/render/js/scroll-bar/*",
  "project_template/assets/*",
  "project_template/assets/icons/*",
  "project_template/assets/fonts/*",
  "render/*",
  "assets/*",
  "*.html",
  "*.css",
  "*.js",
  "*.yaml",
  "*.yml",
  "*.ttf",
  "*.ico",
  "*.json",
  "*.in",
  "*.pyd"
]

